<resources>
    <string name="app_name">PaiPaiPai</string>
    <string name="action_settings">Settings</string>
    <string name="video">视频</string>
    <string name="record">录制</string>
    <string name="info">资料</string>
    <string name="name">昵称</string>
    <string name="gender">性别</string>
    <string name="personalsign">签名</string>
    <string name="user_name">Summer</string>
    <string name="user_sign">Struggle for your better future !</string>
    <string name="exit">退出登录</string>
    <string name="edit_info">编辑个人资料</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
