<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5"
    tools:context="com.example.feifei.paipaipai.EditInfo">


    <include layout="@layout/head" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#fdfdfd"
        >
        <com.example.feifei.paipaipai.CircleImageView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:src="@drawable/headimg"
            android:layout_marginTop="36dp"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="#363535"
            app:civ_border_width="2dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="点击修改头像"
            android:textColor="#515151"
            android:textSize="14dp"
            android:gravity="center"
            android:layout_marginTop="125dp"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="#fdfdfd">
        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="#545454"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/nickname_edit"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:hint="@string/user_name"
            android:textSize="18sp"
            android:textColor="#414141"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:background="#fdfdfd">
        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textColor="#545454"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/gender_edit"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:hint="Male"
            android:textSize="18sp"
            android:textColor="#414141"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:background="#fdfdfd">
        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:text="@string/personalsign"
            android:textSize="20sp"
            android:textColor="#545454"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signal_edit"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:hint="@string/user_sign"
            android:textSize="18sp"
            android:textColor="#414141"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fdfdfd"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/save_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="保存资料"
            android:textSize="18sp"
            android:textColor="#f4745e"/>

    </RelativeLayout>


</LinearLayout>
