<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <!-- Login progress -->


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.feifei.paipaipai.CircleImageView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/headimg"
                android:layout_marginTop="36dp"
                android:layout_gravity="center_horizontal"
                app:civ_border_color="#817f7f"
                app:civ_border_width="2dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/prompt_phone"
                    android:paddingStart="48dp"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:background="#fff"
                    android:paddingLeft="48dp"
                    />

            </android.support.design.widget.TextInputLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_perm_identity_black"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/prompt_password"
                    android:paddingStart="48dp"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="#fff"
                    android:paddingLeft="48dp" />

            </android.support.design.widget.TextInputLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lock_black"
                    android:layout_marginTop="16dp"/>
            </RelativeLayout>

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="#fff"
                android:background="#f4745e"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/sign_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="新用户注册"
                    android:textColor="#f4745e"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
