<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.feifei.paipaipai.InfoFragment">

    <LinearLayout
        android:id="@+id/info_div"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#b5f16a">
        <view.CircleImageView
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:src="@drawable/headimg"
            android:layout_marginTop="36dp"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="#ec0505"
            app:civ_border_width="2dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Hello"
            android:textColor="#fff"
            android:textSize="26dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="125dp"
            />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:text="@string/name"
                    android:textSize="20dp"
                    android:textColor="#a7a6a6"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp" />
                <TextView
                    android:id="@+id/nickname_show"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="#414141"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>
            <View
                android:layout_width="260dp"
                android:layout_height="2px"
                android:background="#9e9b9b"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:text="@string/gender"
                    android:textSize="20sp"
                    android:textColor="#a7a6a6"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp" />
                <TextView
                    android:id="@+id/gender_show"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="#414141"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>
            <View
                android:layout_width="260dp"
                android:layout_height="2px"
                android:background="#9e9b9b"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:text="@string/personalsign"
                    android:textSize="20dp"
                    android:textColor="#a7a6a6"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp" />
                <TextView
                    android:id="@+id/signal_show"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:textColor="#414141"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
            <View
                android:layout_width="260dp"
                android:layout_height="2px"
                android:background="#9e9b9b"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp" />


        </LinearLayout>

    </LinearLayout>



</FrameLayout>
